# PYTHIA

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  PYTHIA_Weeks_1_11_Validation.ipynb  README.md  ROADMAP.md  pyproject.toml
demo/week13/: README.md  mock_traces.jsonl  run_week13_demo.py
docs/: ARCHITECTURE.md  PYTHIA_OMEGA_ROADMAP.md  ROADMAP.md  WEEK10_5_SCALING_PATCH.md  WEEK10_REASONING_TRACE.md  WEEK11_PRECHECK.md  WEEK11_REASONING_TRACE_EVALUATOR.md  WEEK12_INTEGRATED_REPORT.md  WEEK1_SUMMARY.md  WEEK4_RESULTS.md  current_status.md  next_steps.md  week13_status.md
pythia/: __init__.py
pythia/cli/: main.py
pythia/core/: __init__.py  config.py  db.py  export.py  jsonl.py  safety.py
pythia/omega/: cluster_consistency.py  cluster_engine.py  cluster_report.py  clusters.py
pythia/reasoning/: __init__.py
tests/: test_db_helpers.py  test_export_helpers.py  test_imports.py  test_jsonl_helpers.py  test_omega_cluster_consistency.py  test_omega_cluster_engine.py  test_omega_cluster_report.py  test_omega_clusters.py  test_package_layout.py  test_safety_language.py  test_week13_demo.py
