[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "pythia-foundation"
version = "0.1.0"
description = "PYTHIA package foundation utilities and module skeletons."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }

[project.scripts]
pythia = "pythia.cli.main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
